# inga

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  lint.yml  test.yml
examples/: __init__.py  analyze_scm_dataset.py  animate.py  causal_consistency_benchmark.py  causal_training_benchmark.py  causal_transfer_benchmark.py  compare_real_to_synthetic_collection.py  draw.py  explore.py  fixed_scm_dataset.py  large_scale_synthetic_to_real_benchmark.py  optimize_synthetic_collection_similarity.py  random_scm_collection.py  random_scm_dataset.py  save_load_dataset.py  synthetic_corpus_generate.py  synthetic_corpus_train.py  synthetic_to_real_eval.py  tabular_regression_datasets.py  transfer_models.py  utils.py
inga/: _scripts.py
inga/approx_posterior/: laplace.py
inga/scm/: __init__.py  base.py  causal_bias.py  causal_effect.py  dataset.py  dataset_analysis.py  dataset_collection.py  dataset_core.py  html.py  plotting.py  random.py
inga/variable/: __init__.py  base.py  functional.py  linear.py
src/: run.py
steindag/: _scripts.py  run.py
steindag/approx_posterior/: laplace.py
steindag/sem/: __init__.py  base.py  benchmark_causal_regularizer.py  benchmark_compare_causal_methods.py  causal_bias.py  (+10 more)
tests/: test_dataset.py  test_dataset_analysis.py  test_dataset_core.py  test_dataset_similarity.py  test_laplace_posterior.py  test_posterior_stats.py  test_scm.py  test_scm_integration.py  test_scripts.py  test_sem.py  test_sem_integration.py  test_variable.py
tests_integration/: test_examples_run.py  test_readme_snippets.py
(+10 files in other folders)
