[project]
name = "steindag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "torch>=2.8.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]

[project.scripts]
dev = "steindag._scripts:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = [
    "integration: slower end-to-end tests (e.g. running example scripts)",
]
